--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,10 +1,11 @@
 PORT=4000
 
-MONGO_URI=mongodb+srv://hansika:hansika30@cluster0.eptcmbf.mongodb.net/?retryWrites=true
+MONGO_URI=mongodb+srv://hansika9saha:hansika@cluster0.0lmn4oa.mongodb.net/DOC-APP
 
-FRONTEND_URL=http://localhost:5173
 
-DASHBOARD_URL=http://localhost:5174
+FRONTEND_URL= http://localhost:5173
+
+DASHBOARD_URL= http://localhost:5174
 
 JWT_SECRET_KEY=asjhdkjahkjdlfhksahfksad
 
@@ -17,6 +18,18 @@ CLOUDINARY_CLOUD_NAME=dsgbyxzi7
 CLOUDINARY_API_SECRET=ZKu5mQPxL9npjXNaI278lszL8D8
 
 CLOUDINARY_API_KEY=929172593328369
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
